@@ -46,6 +46,7 @@ Done for version 2.8.1 (released ??/??/2016):
        as invalid. Dirty trick to force conversion: bnf[10]=vector(3);
     9- nfelt* functions may now return scalars (t_INT/t_FRAC) in addition to
        t_COL on nf.zk basis.
+   10- remove flag = 2 in nfgaloisconj (slow, unreliable, obsolete for 15 years)
 
 Done for version 2.8.0 (released 12/08/2016):
 
